tests/ui/private.stderr
error[E0446]: private type `Private` in public interface
 --> tests/ui/private.rs:3:10
  |
3 | #[derive(RefCast, RefCastCustom)]
  |          ^^^^^^^ can't leak private type
...
9 | struct Private;
  | -------------- `Private` declared as private
  |
  = note: this error originates in the derive macro `RefCast` (in Nightly builds, run with -Z macro-backtrace for more info)
